--- a/package.json
+++ b/package.json
@@ -4,21 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require test/setup.js"
+    "test": "mocha --require test/setup.js",
+    "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
+    "start": "node src/server.js",
+    "predeploy": "npm audit && npm run migrate:production",
+    "deploy": "git push heroku master"
+  },
+  "keywords": [],
+  "engines": {
+    "node": "10.16.3"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.6.0",
+    "eslint": "^6.6.0",
     "express": "^4.17.1",
-    "helmet": "^4.6.0",
+    "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.6",
-    "morgan": "^1.10.0",
-    "pg": "^8.6.0",
-    "xss": "^1.0.9"
+    "knex": "^0.20.15",
+    "morgan": "^1.9.1",
+    "path": "^0.12.7",
+    "pg": "^7.18.2",
+    "postgrator-cli": "^3.2.0",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.3.4",
